@@ -7,7 +7,9 @@ import org.springframework.stereotype.Service;
 
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -35,41 +37,37 @@ public class RedisService {
 //    }
 
     // 모든 카테고리의 질문 목록 조회
-    public List<String> getAllQuestions() {
+    public Map<String, List<String>> getAllQuestions() {
 
         Set<String> keys = redisTemplate.keys("*:questions");
         System.out.println("Matching keys: " + keys);
-        List<String> allQuestions = new ArrayList<>();
+
+        Map<String, List<String>> allQuestions = new HashMap<>();
 
         if (keys != null) {
             for (String key : keys) {
+
+                // 카테고리 추출
+                String category = key.split(":")[0];
                 // Redis에서 질문 리스트 가져오기
                 List<Object> rawQuestions = redisTemplate.opsForList().range(key, 0, -1);
 
-//                // 각 질문을 UTF-8로 디코딩하여 리스트에 추가
-//                List<String> decodedQuestions = questions.stream()
-//                        .map(question -> new String(question.getBytes(), StandardCharsets.UTF_8)) // 바이트 배열을 UTF-8로 디코딩
-//                        .collect(Collectors.toList());
-
                 if (rawQuestions != null) {
+
                     // Object → String 변환
                     List<String> questions = rawQuestions.stream()
                             .filter(Objects::nonNull)  // null 방지
-                            .map(obj -> obj instanceof String ? (String) obj : obj.toString()) // 문자열 변환
-                            .collect(Collectors.toList());
-
-                    // 디코딩된 질문을 출력
-                    System.out.println("Loaded questions for key " + key + ": " + questions);
-
-                    allQuestions.addAll(questions);
+                            .map(Object::toString)
+                            .toList();
+                    allQuestions.put(category, questions);
                 }
             }
         }
         return allQuestions;
     }
 
-    //    // 카테고리별 답변 조회
-//    public String getAnswer(String category) {
-//        return (String) redisTemplate.opsForValue().get(category + ":answer");
-//    }
+    // 카테고리별 답변 조회
+    public String getAnswer(String category) {
+        return (String) redisTemplate.opsForValue().get(category + ":answer");
+    }
 }
